Выделил user-service, прогнал тесты. все работает